- always play note on click
- fixed file name being used over song name when printing tablature
- removed harmless warning on the terminal when loading a midi file saved by aria
- fixed undoing vertical moves in guitar editor
- fixed undoing vertical moves in drum editor
- fixed 'follow playback' menu item not properly checked/unchecked when switching between songs

1.1.2
- Added german translation (thanks to Friedrich Weber!)
- Cleaned up language code, making adding new languages easier and less error-prone
- Fixed files being overwriten even if user chose "no" in the overwrite dialog (when he didn't choose another path right away)
- Fixed song length detection when importing midi files
- Fixed note ordering bug that could potentially have caused songs to be messed up
- Fixed copying and pasting from a song to another when both songs don't use the same beat resolution
- Fixed wxString conversions, fixing problems with exporting song name, copyright and track names
- Key is now correctly loaded from files in keyboard editor too
- Added check next to currently selected key in key pop-up menu
- Somewhat better handling of out-of-range notes in keyboard editor
- Fixed crashes and heap corruption in score editor
- Fixed weird behaviour when pressing space and nothing is selected
- Fixed notes not beaming in some imported midis
- Hitting enter after editing values in top bar will return focus to main pane
- Code cleanup

1.1.1
- Added feature to see other tracks in background of current track (keyboard view only for now)
- Major improvements to ALSA/linux player. Fixed crashes. Made code cleaner.
- Fixed crash on linux when trying to activate port choice dialog
- Cleanup in notation export code, switched from basic text generation to proper printing/pdf export
- Fixed dialog deletion for notation export and custom tuning picker, should fix hangs (and possible crashes) on shutdown
- Imported midi files now properly suggest a file name when e.g. re-saving them